--- a/package.json
+++ b/package.json
@@ -25,14 +25,19 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "hnswlib-node": "^1.4.2",
+    "https-proxy-agent": "^7.0.1",
     "langchain": "^0.0.100",
     "next": "13.4.4",
+    "openai": "^3.3.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "^1.4.0",
+    "readline": "^1.3.0",
+    "readline-promise": "^1.0.5",
     "replicate": "^0.9.3",
     "tailwindcss": "3.3.2",
+    "typechat": "^0.0.10",
     "typescript": "5.1.3"
   },
   "devDependencies": {
